--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nuxtjs/eslint-config-typescript": "^6.0.1",
     "@nuxtjs/eslint-module": "^3.0.2",
     "@types/faker": "^5.5.7",
+    "@types/jest": "^26.0.24",
     "@vue/test-utils": "^1.2.1",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^27.0.5",
